--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSE MOTORS</title>
-</head>
+    <%- include('partials/head') %> 
 <body>
-    <p>CSE MOTORS</p>
+    <%- include('partials/header') %> 
+    <%- include('partials/navigation') %>
+    <%- include('partials/footer') %>  
 </body>
 </html>
