--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,63 @@
 <body>
     <%- include('partials/header') %> 
     <%- include('partials/navigation') %>
+    <main>
+        <h1>Welcome to CSE Motors!</h1>
+        <div class="main_container">
+            <div class="img_container">
+                <img src="/images/vehicles/delorean.jpg" alt="delorean " loading="lazy">
+            </div>
+
+            <aside>
+                <h2>DMC Delorean</h2>
+                <p class="p_aside">3 Cup holders</p>
+                <p class="p_aside">Superman doors</p>
+                <p class="p_aside">Fuzzy dice!</p>
+                    <img src="/images/site/own_today.png" alt="own today">
+            </aside>
+        </div>
+        <article>
+            <section>
+                <h3>DMC Delorean reviews</h3>
+                <ul>
+                    <li>"So fast it's almost like traveling in time" (4/5)</li>
+                    <li>"Coolest ride on the road" (4/5)</li>
+                    <li>"I'm feeling McFly!" (5/5)</li>
+                    <li>"The most futuristic ride of our day"(4.5/5)</li>
+                    <li>"80's livin and I love it!"(5/5)</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Delorean Upgrades</h3>
+                <div class="figure_container">
+                   <figure>
+                        <div class="figure_image_container">
+                            <img src="/images/upgrades/flux-cap.png" alt="flux capacitor">
+                        </div>
+                        <figcaption><a href="#">Flux Capacitor</a></figcaption>
+                   </figure> 
+                   <figure>
+                        <div class="figure_image_container">
+                            <img src="/images/upgrades/flame.jpg" alt="flame">
+                        </div>
+                        <figcaption><a href="#">Flame Decals</a></figcaption>
+                   </figure> 
+                   <figure>
+                        <div class="figure_image_container">
+                            <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper sticker">
+                        </div>
+                        <figcaption><a href="#">Bumper Stickers</a></figcaption>
+                   </figure> 
+                   <figure>
+                        <div class="figure_image_container">
+                            <img src="/images/upgrades/hub-cap.jpg" alt="">
+                        </div>
+                        <figcaption><a href="#">Hub Caps</a></figcaption>
+                   </figure> 
+                </div>
+            </section>
+        </article>
+    </main>
     <%- include('partials/footer') %>  
 </body>
 </html>
