--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,4 +3,183 @@
 *:before,
 *:after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.main_container > .img_container > img{
+  width: 300px;
+}
+header > span > a, header > div > a{
+  text-decoration: none;
+  color:black;
+}
+.motors_title{
+  font-size: 28px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+}
+.account_text{
+  font-size: 12px;
+  font-family: "Bodoni Moda SC", serif;
+  font-weight: 1000;
+}
+header{
+  border: 4px solid #4C96D7;
+  border-bottom: 0px;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 5px;
+  border-radius: 8px 8px 0px 0px;
+}
+nav > ul > li:hover{
+  cursor: pointer;
+}
+nav > ul{
+  display: flex;
+  width: 100%;
+  /* border: 1px solid green; */
+  justify-content: space-around; 
+  background-color: rgb(15, 14, 14);
+  color: white;
+  padding: 10px 5px;
+  list-style: none;
+}
+nav{
+  width: 100%;
+  border: 4px solid #4C96D7;
+  border-bottom: 0px;
+  border-top: 0px;
+}
+h1{
+  font-size: 20px;
+  margin: 15px 0px;
+  /* border: 1px solid green; */
+  width: 98%;
+}
+main{
+  border: 4px solid #4C96D7;
+  border-bottom: 0px;
+  border-top: 0px;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main_container{
+  /* border: 1px solid violet; */
+  width: 320px;
+}
+aside>img{
+  width: 85px;
+}
+aside{
+  width: 110px;
+  /* border: 1px solid red; */
+  position: absolute;
+  top: 165px;
+  color: #4C96D7;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.img_container{
+  /* border: 1px solid orange; */
+  display: flex;
+  justify-content: flex-end;
+}
+h2{
+  font-size: 16px;
+  font-weight: 600;
+}
+.p_aside{
+  font-size: 16px
+}
+section{
+  /* border: 1px solid black; */
+  width: 320px;
+}
+section > ul{
+  list-style: disc;
+  font-size: 14px;
+  padding-left: 20px;
+}
+section > ul> li{
+  margin-bottom: 10px;
+}
+.figure_container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 6px;
+  margin-bottom: 5px;
+}
+.figure_image_container{
+  background-color: #4C96D7;
+  border: 1px solid black;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+figure{
+  height: 110px;
+}
+figcaption{
+  text-align: center;
+}
+footer{
+  border: 4px solid #4C96D7;
+  border-top: 0px;
+  border-radius: 0px 0px 8px 8px;
+}
+@media screen and (min-width: 768px) {
+  body {
+    background-image: url("/images/site/small_check.jpg"); /* Ruta de la imagen */
+    background-size: cover; /* La imagen cubre toda la pantalla */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+  header, main, article, footer {
+    background-color: white;
+    width: 80%;
+  }
+  nav{
+    width: 80%;
+    padding: 0px 15px;
+    background-color: white;
+  }
+  aside{
+    width: 180px;
+    top: 20px;
+    height: 180px;
+  }
+  .main_container{
+    transform: translateX(0px);
+    width: 485px;
+  }
+  .main_container > .img_container > img{
+    width: 400px;
+  }
+  h2,.p_aside{
+    font-size: 26px;
+  }
+  aside>img{
+    margin-top: 10px;
+    width: 150px;
+  }
+  section{
+    width: 100%;
+  }
+  article{
+    flex-direction: row-reverse;
+    display: flex;
+    width: 95%;
+  }
+  footer{
+    margin-bottom: 8px;
+  }
+  header{
+    margin-top: 8px;
+  }
 }
